fixed frontend, added Unnamed 0 game

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                     <li class="list-group-item">
                         <h3>Игры</h3>
                         <br>
-                        <div class="row row-cols-2 gx-1 gy-3">
-                            <div class="col-3">
-                                <div class="card h-100 d-flex flex-column" style="width: 18rem;">
+                        <div class="row row-cols-sm-1 row-cols-lg-2 row-cols-xl-3 row-cols-xxl-4 gx-1 gy-3">
+                            <div class="col-12 col-6-md col-4-lg col-3-xl">
+                                <div class="card h-100 d-flex flex-column" style="width: 18rem; margin-left: auto; margin-right: auto;">
                                     <div>
                                         <img src="img/symmetro-preview.png" class="card-img-top preview-image" onerror="this.onerror=null; this.src='img/placeholder-image.png';" alt="...">
                                         <div class="card-body">
@@ -40,13 +40,13 @@
                                     <div style="height:4px;"></div>
                                 </div>
                             </div>
-                            <div class="col-3">
-                                <div class="card h-100 d-flex flex-column" style="width: 18rem;">
+                            <div class="col-12 col-6-md col-4-lg col-3-xl">
+                                <div class="card h-100 d-flex flex-column" style="width: 18rem; margin-left: auto; margin-right: auto;">
                                     <div>
                                         <img src="img/unnamed-2-preview.png" class="card-img-top preview-image" onerror="this.onerror=null; this.src='img/placeholder-image.png';" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Unnamed 2</h5>
-                                            <p class="card-text">Здесь может быть ваше название</p>
+                                            <p class="card-text">Летал компани, но с замками</p>
                                             <a href="unnamed2.html" class="btn btn-primary">На страницу игры</a>
                                         </div>
                                     </div>
@@ -63,8 +63,8 @@
                                     <div style="height:4px;"></div>
                                 </div>
                             </div>
-                            <div class="col-3">
-                                <div class="card h-100 d-flex flex-column" style="width: 18rem;">
+                            <div class="col-12 col-6-md col-4-lg col-3-xl">
+                                <div class="card h-100 d-flex flex-column" style="width: 18rem; margin-left: auto; margin-right: auto;">
                                     <div>
                                         <img src="img/bombs-remastered-preview.png" class="card-img-top preview-image" onerror="this.onerror=null; this.src='img/placeholder-image.png';" alt="...">
                                         <div class="card-body">
@@ -83,8 +83,8 @@
                                     <div style="height:4px;"></div>
                                 </div>
                             </div>
-                            <div class="col-3">
-                                <div class="card h-100 d-flex flex-column" style="width: 18rem;">
+                            <div class="col-12 col-6-md col-4-lg col-3-xl">
+                                <div class="card h-100 d-flex flex-column" style="width: 18rem; margin-left: auto; margin-right: auto;">
                                     <div>
                                         <img src="img/multiplayered-2-preview.png" class="card-img-top preview-image" onerror="this.onerror=null; this.src='img/placeholder-image.png';" alt="...">
                                         <div class="card-body">
@@ -106,13 +106,13 @@
                                     <div style="height:4px;"></div>
                                 </div>
                             </div>
-                            <div class="col-3">
-                                <div class="card h-100 d-flex flex-column" style="width: 18rem;">
+                            <div class="col-12 col-6-md col-4-lg col-3-xl">
+                                <div class="card h-100 d-flex flex-column" style="width: 18rem; margin-left: auto; margin-right: auto;">
                                     <div>
                                         <img src="img/unnamed-1-preview.png" class="card-img-top preview-image" onerror="this.onerror=null; this.src='img/placeholder-image.png';" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Unnamed 1</h5>
-                                            <p class="card-text">Зачем здесь название, если это просто практики по юнити?</p>
+                                            <p class="card-text">Побег с лунной базы Амогусов</p>
                                             <a href="unnamed1.html" class="btn btn-primary">На страницу игры</a>
                                         </div>
                                     </div>
@@ -126,13 +126,13 @@
                                     <div style="height:4px;"></div>
                                 </div>
                             </div>
-                            <div class="col-3">
-                                <div class="card h-100 d-flex flex-column" style="width: 18rem;">
+                            <div class="col-12 col-6-md col-4-lg col-3-xl">
+                                <div class="card h-100 d-flex flex-column" style="width: 18rem; margin-left: auto; margin-right: auto;">
                                     <div>
                                         <img src="img/multiplayered-1-preview.png" class="card-img-top preview-image" onerror="this.onerror=null; this.src='img/placeholder-image.png';" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Multiplayered 1</h5>
-                                            <p class="card-text">Зачем здесь название, если это просто практика по мультиплееру?</p>
+                                            <p class="card-text">Оффлайн мультиплеер (splitscreen)</p>
                                             <a href="multiplayered1.html" class="btn btn-primary">На страницу игры</a>
                                         </div>
                                     </div>
@@ -146,13 +146,13 @@
                                     <div style="height:4px;"></div>
                                 </div>
                             </div>
-                            <div class="col-3">
-                                <div class="card h-100 d-flex flex-column" style="width: 18rem;">
+                            <div class="col-12 col-6-md col-4-lg col-3-xl">
+                                <div class="card h-100 d-flex flex-column" style="width: 18rem; margin-left: auto; margin-right: auto;">
                                     <div>
                                         <img src="img/unnamed-0-preview.png" class="card-img-top preview-image" onerror="this.onerror=null; this.src='img/placeholder-image.png';" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Unnamed 0</h5>
-                                            <p class="card-text">Зачем здесь название, если это просто 7 практика по геймдизайну?</p>
+                                            <p class="card-text">Название?.. а оно было?</p>
                                             <a href="unnamed0.html" class="btn btn-primary">На страницу игры</a>
                                         </div>
                                     </div>
