--- a/unnamed0.html
+++ b/unnamed0.html
@@ -18,7 +18,7 @@
                 <ul class="list-group">
                     <li class="list-group-item"> <!-- название игры, картинка, краткое описание -->
                         <h4 class="text-center">Unnamed 0</h4>
-                        <img src="img/unnamed-0-preview.png" class="preview-image" onerror="this.onerror=null; this.src='img/placeholder-image.png';" alt="..." style="float: right;">
+                        <img src="img/unnamed-0-preview.png" class="preview-image float-right" onerror="this.onerror=null; this.src='img/placeholder-image.png';" alt="...">
                         <p>
                             Студент решил отвлечься от написания курсовой и выйти погулять. Но он еще не подозревал, к чему его это приведет...
                         </p>
@@ -40,11 +40,12 @@
                     </li>
                     <li class="list-group-item"> <!-- инструкция по установке -->
                         <h4>Как запустить</h4>
-                        Эта игра доступна в браузере. Просто перейдите по ссылке ниже.
+                        Эта игра доступна в браузере. Просто перейдите по ссылке ниже.<br>
+                        Чтобы вернуться обратно на эту страницу, нажмите кнопку "Назад" в браузере.
                     </li>
                     <li class="list-group-item"> <!-- ссылки на билды или веб-версии -->
                         <h4>Ссылки</h4>
-                        <a href="" class="btn btn-primary">Веб-версия</a>
+                        <a href="web/unnamed 0/index.html" class="btn btn-primary">Веб-версия</a>
                     </li>
                 </ul>
             </div>
