added game pages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Symmetro</h5>
                                             <p class="card-text">Симулятор поездки на поезде</p>
-                                            <a href="symmetro.html" class="btn btn-primary">На страницу игры</a>
+                                            <!--<a href="symmetro.html" class="btn btn-primary">На страницу игры</a>-->
+                                            <div class="btn btn-secondary disabled">В разработке</div>
                                         </div>
                                     </div>
                                     <div class="mt-auto">
@@ -90,7 +91,8 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Multiplayered 2</h5>
                                             <p class="card-text">Битва роботов в выжженной деревне</p>
-                                            <a href="multiplayered2.html" class="btn btn-primary">На страницу игры</a>
+                                            <!--<a href="multiplayered2.html" class="btn btn-primary">На страницу игры</a>-->
+                                            <div class="btn btn-secondary disabled">В разработке</div>
                                         </div>
                                     </div>
                                     <div class="mt-auto">
@@ -113,7 +115,8 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Unnamed 1</h5>
                                             <p class="card-text">Побег с лунной базы Амогусов</p>
-                                            <a href="unnamed1.html" class="btn btn-primary">На страницу игры</a>
+                                            <!--<a href="unnamed1.html" class="btn btn-primary">На страницу игры</a>-->
+                                            <div class="btn btn-secondary disabled">В разработке</div>
                                         </div>
                                     </div>
                                     <div class="mt-auto">
@@ -133,7 +136,8 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Multiplayered 1</h5>
                                             <p class="card-text">Оффлайн мультиплеер (splitscreen)</p>
-                                            <a href="multiplayered1.html" class="btn btn-primary">На страницу игры</a>
+                                            <!--<a href="multiplayered1.html" class="btn btn-primary">На страницу игры</a>-->
+                                            <div class="btn btn-secondary disabled">В разработке</div>
                                         </div>
                                     </div>
                                     <div class="mt-auto">
