--- a/unnamed0.html
+++ b/unnamed0.html
@@ -40,12 +40,11 @@
                     </li>
                     <li class="list-group-item"> <!-- инструкция по установке -->
                         <h4>Как запустить</h4>
-                        Эта игра доступна в браузере. Просто перейдите по ссылке ниже.<br>
-                        Чтобы вернуться обратно на эту страницу, нажмите кнопку "Назад" в браузере.
+                        Просто перейдите по ссылке ниже - игра будет открыта в новой вкладке вашего браузера.
                     </li>
                     <li class="list-group-item"> <!-- ссылки на билды или веб-версии -->
                         <h4>Ссылки</h4>
-                        <a href="web/unnamed 0/index.html" class="btn btn-primary">Веб-версия</a>
+                        <a href="web/unnamed 0/index.html" target="_blank" class="btn btn-primary">Веб-версия</a>
                     </li>
                 </ul>
             </div>
