--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Unnamed 1</h5>
                                             <p class="card-text">Побег с лунной базы Амогусов</p>
-                                            <!--<a href="unnamed1.html" class="btn btn-primary">На страницу игры</a>-->
-                                            <div class="btn btn-secondary disabled">В разработке</div>
+                                            <a href="unnamed1.html" class="btn btn-primary">На страницу игры</a>
                                         </div>
                                     </div>
                                     <div class="mt-auto">
