--- a/unnamed1.html
+++ b/unnamed1.html
@@ -5,11 +5,11 @@
         <link href="css/carousels.css" rel="stylesheet" type="text/css">
         <link rel="icon" type="image/png" href="img/channel-icon.png">
         <meta charset="utf8">
-        <title>Unnamed 0 - The common channel</title>
+        <title>Unnamed 1 - The common channel</title>
     </head>
     <body>
         <header>
-            <h2>The common channel - Unnamed 0</h2>
+            <h2>The common channel - Unnamed 1</h2>
             <div id="back">
                 <a href="index.html" class="btn btn-secondary">На главную</a>
             </div>
@@ -18,24 +18,25 @@
             <div class="container">
                 <ul class="list-group">
                     <li class="list-group-item"> <!-- название игры, картинка, краткое описание -->
-                        <h4 class="text-center">Unnamed 0</h4>
-                        <img src="img/unnamed-0-preview.png" class="preview-image float-right" onerror="this.onerror=null; this.src='img/placeholder-image.png';" alt="...">
+                        <h4 class="text-center">Unnamed 1</h4>
+                        <img src="img/unnamed-1-preview.png" class="preview-image float-right" onerror="this.onerror=null; this.src='img/placeholder-image.png';" alt="...">
                         <p>
-                            Студент решил отвлечься от написания курсовой и выйти погулять. Но он еще не подозревал, к чему его это приведет...
+                            Игра про побег с лунной базы Амогусов на скорость.<br><small>правда, не всегда</small>
                         </p>
                     </li>
                     <li class="list-group-item"> <!-- более подробное описание игры -->
                         <h4>Описание</h4>
                         <p>
-                            Визуальная новелла, которая повествует о студенте, уже неделю пишущем курсовую. Он решил отвлечься от этого и прогуляться. Однако все не так просто, как может показаться: студента уже ждут неприятности.
+                            Амогусы поймали вас и доставили на свою лунную базу с известными только им одним целями. Правда, они случайно (или нет) оставили в вашей камере винтовку и восемь патронов. Вы, пользуясь этим шансом, решили выбраться на свободу.
                         </p>
-                        <b>Сможете ли вы пройти игру на все концовки?</b>
                         <p>
-                            Всего в игре 17 концовок. Они делятся на 3 категории в зависимости от исхода для игрока:
+                            Цель игры - добраться до космического корабля, на котором вы сможете улететь с базы. В этом вам будут мешать:
                             <ul>
-                                <li>хорошие - персонаж выжил;</li>
-                                <li>плохие - персонаж умер;</li>
-                                <li>неопределенные - открытая концовка, допускающая несколько вариантов развития событий.</li>
+                                <li>Амогусы - противники, нападающие на вас, если вы подойдете к ним слишком близко. Наносят 10 ед. урона за атаку;</li>
+                                <li>Короли из Clash Royale - другой вид противников, который тоже нападает на вас, если вы подойдете к ним слишком близко. Наносят 15 ед. урона за атаку;</li>
+                                <li>планировка лунной базы;</li>
+                                <li>баррикады, спешно поставленные Амогусами, чтобы задержать вас;</li>
+                                <li>разнообразные ловушки. <small>спойлеров не будет</small></li>
                             </ul>
                         </p>
                     </li>
@@ -49,13 +50,13 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                <img src="img/unnamed-0/1.png" class="d-block w-100" alt="..." onerror="this.onerror=null; this.src='img/placeholder-image.png';">
+                                <img src="img/unnamed-1/1.png" class="d-block w-100" alt="..." onerror="this.onerror=null; this.src='img/placeholder-image.png';">
                                 </div>
                                 <div class="carousel-item">
-                                <img src="img/unnamed-0/2.png" class="d-block w-100" alt="..." onerror="this.onerror=null; this.src='img/placeholder-image.png';">
+                                <img src="img/unnamed-1/2.png" class="d-block w-100" alt="..." onerror="this.onerror=null; this.src='img/placeholder-image.png';">
                                 </div>
                                 <div class="carousel-item">
-                                <img src="img/unnamed-0/3.png" class="d-block w-100" alt="..." onerror="this.onerror=null; this.src='img/placeholder-image.png';">
+                                <img src="img/unnamed-1/3.png" class="d-block w-100" alt="..." onerror="this.onerror=null; this.src='img/placeholder-image.png';">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#screenshotCarousel" data-bs-slide="prev">
@@ -70,11 +71,16 @@
                     </li>
                     <li class="list-group-item"> <!-- инструкция по установке -->
                         <h4>Как запустить</h4>
-                        Просто перейдите по ссылке ниже - игра будет открыта в новой вкладке вашего браузера.
+                        <ol>
+                            <li>Перейдите по ссылке ниже</li>
+                            <li>Скачайте .zip архив</li>
+                            <li>Распакуйте куда-нибудь</li>
+                            <li>Запустите Unnamed 1.exe</li>
+                            <li>Готово!</li>
+                        </ol>
                     </li>
                     <li class="list-group-item"> <!-- ссылки на билды или веб-версии -->
                         <h4>Ссылки</h4>
-                        <a href="web/unnamed 0/index.html" target="_blank" class="btn btn-primary">Веб-версия</a>
                     </li>
                 </ul>
             </div>
