added multiplayered2 page

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Multiplayered 2</h5>
                                             <p class="card-text">Битва роботов в выжженной деревне</p>
-                                            <!--<a href="multiplayered2.html" class="btn btn-primary">На страницу игры</a>-->
-                                            <div class="btn btn-secondary disabled">В разработке</div>
+                                            <a href="multiplayered2.html" class="btn btn-primary">На страницу игры</a>
                                         </div>
                                     </div>
                                     <div class="mt-auto">
@@ -101,7 +100,7 @@
                                                 Аркада
                                             </li>
                                             <li class="list-group-item">
-                                                В разработке
+                                                Мультиплеер
                                             </li>
                                         </ul>
                                     </div>
@@ -142,7 +141,10 @@
                                     <div class="mt-auto">
                                         <ul class="list-group list-group-flush">
                                             <li class="list-group-item">
-                                                Гонка?
+                                                Гонка
+                                            </li>
+                                            <li class="list-group-item">
+                                                Мультиплеер
                                             </li>
                                         </ul>
                                     </div>
