--- a/unnamed1.html
+++ b/unnamed1.html
@@ -39,6 +39,16 @@
                                 <li>разнообразные ловушки. <small>спойлеров не будет</small></li>
                             </ul>
                         </p>
+                        <p>
+                            В игре есть система достижений, которые делятся на несколько категорий:
+                            <ul>
+                                <li>достижения на количество сыгранных игр (как успешных, так и не очень);</li>
+                                <li>достижения на скорость прохождения игры;</li>
+                                <li>достижения на стиль прохождения игры (например, без убийств);</li>
+                                <li>а также 4 секретных достижения.</li>
+                            </ul>
+                            Обычные достижения в качестве описания имеют четко поставленную цель (например, пройти игру за 3 минуты). Секретные достижения в качестве описания имеют лишь подсказку, слабо связанную с сутью достижения.
+                        </p>
                     </li>
                     <li class="list-group-item">
                         <h4>Скриншоты</h4>
@@ -47,6 +57,9 @@
                                 <button type="button" data-bs-target="#screenshotCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                                 <button type="button" data-bs-target="#screenshotCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
                                 <button type="button" data-bs-target="#screenshotCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                <button type="button" data-bs-target="#screenshotCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                <button type="button" data-bs-target="#screenshotCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                                <button type="button" data-bs-target="#screenshotCarousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
@@ -57,6 +70,15 @@
                                 </div>
                                 <div class="carousel-item">
                                 <img src="img/unnamed-1/3.png" class="d-block w-100" alt="..." onerror="this.onerror=null; this.src='img/placeholder-image.png';">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/unnamed-1/4.png" class="d-block w-100" alt="..." onerror="this.onerror=null; this.src='img/placeholder-image.png';">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/unnamed-1/5.png" class="d-block w-100" alt="..." onerror="this.onerror=null; this.src='img/placeholder-image.png';">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/unnamed-1/6.png" class="d-block w-100" alt="..." onerror="this.onerror=null; this.src='img/placeholder-image.png';">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#screenshotCarousel" data-bs-slide="prev">
