--- a/multiplayered2.html
+++ b/multiplayered2.html
@@ -44,7 +44,7 @@
                             Роботы-конкуренты - не единственное, что вас ждет в этой деревне. В этих местах часто встречаются огненные смерчи, которые сжигают все на своем пути. По неизвестной причине они притягиваются к металлическим объектам, поэтому держитесь от них подальше: подъехав слишком близко, вы рискуете стать целью для смерча.
                         </p>
                         <p>
-                            Оказавшись рядом со смерчем, вы будете получать по 5 ед. урона каждые 0.25 секунды (20 ед. урона в секунду). Если вы окажетесь внутри него, то урон увеличится до 10 ед. каждые 0.25 секнуды (40 ед. урона в секунду).
+                            Находясь рядом со смерчем, вы будете получать по 5 ед. урона каждые 0.25 секунды (20 ед. урона в секунду). Если вы окажетесь внутри него, то урон увеличится до 10 ед. каждые 0.25 секнуды (40 ед. урона в секунду).
                         </p>
                     </li>
                     <li class="list-group-item">
@@ -88,8 +88,7 @@
                     </li>
                     <li class="list-group-item"> <!-- ссылки на билды или веб-версии -->
                         <h4>Ссылки</h4>
-                        Under construction
-                        <!--<a target="_blank" href="https://drive.google.com/drive/folders/1NnvadLTysnfWdY-XsxjTAXY85-SGs81t?usp=sharing" class="btn btn-primary external">Google drive</a>-->
+                        <a target="_blank" href="https://drive.google.com/drive/folders/1tFk8YarbJ3Iy2JCAfswWPyMSm0NcOVFU?usp=sharing" class="btn btn-primary external">Google drive</a>
                     </li>
                 </ul>
             </div>
