--- a/multiplayered2.html
+++ b/multiplayered2.html
@@ -48,6 +48,17 @@
                         </p>
                     </li>
                     <li class="list-group-item">
+                        <h4>Управление</h4>
+                        <ul>
+                            <li>WASD - перемещение;</li>
+                            <li>движение мышкой - поворот камеры и башни робота;</li>
+                            <li>ЛКМ - стрельба из пушки;</li>
+                            <li>ПКМ - стрельба из пулемета;</li>
+                            <li>Shift - переключение камеры;</li>
+                            <li>F - переворот робота, если он перевернулся.</li>
+                        </ul>
+                    </li>
+                    <li class="list-group-item">
                         <h4>Скриншоты</h4>
                         <div id="screenshotCarousel" class="carousel slide carousel-fade">
                             <div class="carousel-indicators">
