updated multiplayered 2 page

--- a/multiplayered2.html
+++ b/multiplayered2.html
@@ -33,15 +33,18 @@
                             Вы управляете одним из 8 роботов. Ваша цель - остаться единственным уцелевшим роботом в деревне. Для этого необходимо победить остальных игроков, управляющих другими роботами.
                         </p>
                         <p>
-                            Робот имеет 250 очков прочности, а также следующее вооружение:
+                            Робот имеет 400 очков прочности и следующее вооружение:
                             <ul>
-                                <li>Пулемет, стреляющий мелкими пулями. Интервал между выстрелами небольшой, но из-за технического несовершенства пулемет может выпустить максимум 6 пуль за одну очередь - после этого ему требуется немного остыть. <i>Пули наносят по 5 ед. урона</i>;</li>
+                                <li>Скорострельный пулемет, стреляющий мелкими пулями. <i>Пули наносят по 5 ед. урона</i>;</li>
                                 <li>Пушка, стреляющая снарядами. Перезарядка - 5 секунд, наносимый урон - 75 ед.</li>
                             </ul>
-                            Прицеливание осуществляется с помощью двух лазеров - для каждого орудия свой лазер. На данный момент лазеры имеют очень низкую мощность, поэтому прицельный огонь на большом расстоянии крайне неэффективен - в том числе из-за отсутствия системы захвата целей и снайперского режима.
+                            Также у робота имеется система защиты - щит, поглощающий любой урон в течение короткого времени. Это идеальный инструмент для быстрой атаки на других роботов или побега в критической ситуации. Щит перезаряжается довольно долго, поэтому используйте его с умом.
                         </p>
                         <p>
-                            Роботы-конкуренты - не единственное, что вас ждет в этой деревне. В этих местах часто встречаются огненные смерчи, которые сжигают все на своем пути. По неизвестной причине они притягиваются к металлическим объектам, поэтому держитесь от них подальше: подъехав слишком близко, вы рискуете стать целью для смерча.
+                            Роботы-конкуренты - не единственная проблема в этой деревне. Деревня окутана зловещим красным туманом, из-за которого сильно снижается видимость. Однако это не помешает вам увидеть противников: в целях тестирования роботы оснащены ярко светящимися полосами.
+                        </p>
+                        <p>
+                            Также в этих местах часто встречаются огненные смерчи, которые сжигают все на своем пути. По неизвестной причине они притягиваются к металлическим объектам, поэтому держитесь от них подальше: подъехав слишком близко, вы рискуете стать целью для смерча.
                         </p>
                         <p>
                             Находясь рядом со смерчем, вы будете получать по 5 ед. урона каждые 0.25 секунды (20 ед. урона в секунду). Если вы окажетесь внутри него, то урон увеличится до 10 ед. каждые 0.25 секнуды (40 ед. урона в секунду).
@@ -55,7 +58,8 @@
                             <li>ЛКМ - стрельба из пушки;</li>
                             <li>ПКМ - стрельба из пулемета;</li>
                             <li>Shift - переключение камеры;</li>
-                            <li>F - переворот робота, если он перевернулся.</li>
+                            <li>F - переворот робота, если он перевернулся;</li>
+                            <li>Q - активация щита.</li>
                         </ul>
                     </li>
                     <li class="list-group-item">
