--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                     <div class="mt-auto">
                                         <ul class="list-group list-group-flush">
                                             <li class="list-group-item">
-                                                Аркада
+                                                <s>Боевой рояль</s> Battle royale
                                             </li>
                                             <li class="list-group-item">
                                                 Мультиплеер
